[tool.poetry]
name = "cgm_forecast"
version = "0.1.0"
description = ""
authors = ["madsobdrup <mads@hedia.co>"]

[tool.poetry.dependencies]
python = "3.8.6"
numpy = "^1.19.2"
torch = "^1.4.0"
matplotlib = "^3.1.3"
sklearn = "^0.0"
scikit-learn = "^0.22.1"
plotly = "^4.5.4"
gspread = "^3.4.1"
oauth2client = "^4.1.3"
pandas = "^1.0.3"
tensorboard = "2.2.1"
tqdm = "^4.49.0"
ray = {extras = ["tune"], version = "^1.0.0"}
statsmodels = "^0.12.0"
torchvision = "^0.7.0"
pykeops = "^1.4.1"
seaborn = "^0.11.0"
autopep8 = "^1.5.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
